--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 SBIN.*
-UserInterfaceCSS/instance/
-UserInterfaceCSS/website/__pycache__/
+UserInterface/instance/
+UserInterface/website/__pycache__/
