--- a/Strategies/Makefile
+++ b/Strategies/Makefile
@@ -23,6 +23,9 @@ stop_loss_threshold := 0
 
 run: main.out
 	@./main.out $(strategy) $(symbol) $(n) $(x) $(start_date) $(end_date) $(p) $(max_hold_days) $(c1) $(c2) $(oversold_threshold) $(overbought_threshold) $(adx_threshold) $(train_start_date) $(train_end_date) $(symbol1) $(symbol2) $(threshold) $(stop_loss_threshold)
+#clean
+	@rm -f *.out
+	@rm -f Stocks/*
 
 
 
@@ -30,6 +33,5 @@ main.out: main.cpp
 	@g++ main.cpp -o main.out
 
 clean:
-	@rm -f *.out
 	@rm -f Stocks/*
-
+	@rm -f results/*
